# fabrica_software_garagem

./: .gitignore  README.md
backend/: .gitignore  db.sqlite3  pyproject.toml
backend/config/: settings.py  urls.py
backend/garagem/: admin.py
backend/garagem/migrations/: 0001_initial.py  0002_categoria.py  0003_acessorio_cor_modelo_veiculo.py  0004_alter_acessorio_options_alter_categoria_options_and_more.py  0005_remove_veiculo_acessorio_veiculo_acessorio.py  0006_remove_veiculo_acessorio_veiculo_acessorio.py
backend/garagem/models/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
backend/garagem/serializers/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
backend/garagem/views/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
backend/uploader/migrations/: 0001_initial.py
backend/uploader/models/: image.py
backend/usuario/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: acessorios.js  categorias.js  cores.js  marcas.js  modelos.js  veiculos.js
frontend/src/components/: Header.vue  Listagem.vue  TableHeaderList.vue
frontend/src/router/: index.js
frontend/src/views/: AcessorioView.vue  CategoriaView.vue  CorView.vue  HomeView.vue  MarcaView.vue  ModeloView.vue  VeiculoView.vue
